# capstone

./: .gitignore  README.md  app.py  dummy_data.json  pyproject.toml  seohyun_change.md
app/: main.py  schemas.py
app/routers/: cluster.py  jobs.py  llm.py  movies.py  results.py  reviews.py
app/services/: cluster_service.py  clustering_service_hdbscan.py  clustering_service_kmeans.py  embedding_service.py  final_service.py  job_service.py  llm_service.py  movie_service.py  pipeline_service.py  result_service.py  review_service.py
data/: llm_results.json.txt
frontend/: dummy_data.json  streamlit_app.py
