[project]
name = "capstone"
version = "0.1.0"
description = "capstone design"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "hdbscan>=0.8.41",
    "numpy>=2.4.3",
    "openai>=2.30.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "uvicorn>=0.42.0",
]
